Added camera class

--- a/Software-Ray-Tracer-v2.vcxproj
+++ b/Software-Ray-Tracer-v2.vcxproj
@@ -128,12 +128,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="camera.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="brdf.hpp" />
+    <ClInclude Include="camera.hpp" />
     <ClInclude Include="input.hpp" />
     <ClInclude Include="ray.hpp" />
     <ClInclude Include="sphere.hpp" />
