--- a/Software-Ray-Tracer-v2.vcxproj.filters
+++ b/Software-Ray-Tracer-v2.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="triangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stlmodel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vec.hpp">
@@ -83,5 +86,13 @@
     <ClInclude Include="shape.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stlmodel.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\Downloads\dodecahedron.stl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
